better log handling, reformating, pylintrc overrides line length to 120, added favicon

--- a/networktools/templates/layout.html
+++ b/networktools/templates/layout.html
@@ -5,7 +5,7 @@
     <title>What Is My IP</title>
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}">
+    <link rel="icon" href="{{ url_for('static', filename='img/favicon.ico') }}" type="image/x-icon" />
 </head>
 <body>
     <div id="wrapper">
